[package]
name = "rorbitor"
version = "0.1.0"
authors = ["abhi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.5"
image = "0.23.5"
async-std = {version ="1.6.1", features=["attributes"]}
async-macros = "2.0.0"
futures = "0.3.5"
